# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025-present nullvm hypervisor project and contributors

# A workspace is a collection of one or more packages,
# called workspace members, that are managed together.
[workspace]
# The resolver is a global option that affects the entire workspace.
# Type "3" mean (edition = "2024" default, requires Rust 1.84+).
resolver = "3"
# Packages to include in the workspace.
members = [
    "nullvm-service",
    "nullvm-common",
]
