# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025-present nullvm hypervisor project and contributors

# A workspace is a collection of one or more packages,
# called workspace members, that are managed together.
[workspace]
# The resolver is a global option that affects the entire workspace.
# Type "3" mean (edition = "2024" default, requires Rust 1.84+).
resolver = "3"
# Packages to include in the workspace.
members = [
    "nullvm_service",
    "nullvm_common",
]

# Shared dependencies across workspace crates.
[workspace.dependencies]
# Data & time library.
chrono = "0.4.41"
# Raw FFI bindings to platform's system libraries.
libc = "0.2"
# FFI bindings to KVM.
kvm-bindings = "0.13.0"
# KVM API wrapper.
kvm-ioctls = "0.23.0"
