# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025-present nullvm hypervisor project and contributors

# Project package info section.
[package]
name        = "nullvm_common"
version     = "0.0.1"
description = "Common code across NullVM hypervisor project crates"
authors     = ["Alexander Kuzin <alkuzindev@gmail.com>"]
repository  = "https://github.com/alkuzin/nullvm"
license     = "GPL-3"
edition     = "2024"

# Project dependencies section.
[dependencies]
# Data & time library.
chrono = { workspace = true }
# Raw FFI bindings to platform's system libraries.
libc = { workspace = true }
# KVM API wrapper.
kvm-ioctls = { workspace = true }
# Macro for declaring lazily evaluated statics.
lazy_static = { workspace = true }
