# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025-present nullvm hypervisor project and contributors

# Project package info section.
[package]
name        = "nullvm_service"
version     = "0.0.1"
description = "NullVM hypervisor management service"
authors     = ["Alexander Kuzin <alkuzindev@gmail.com>"]
repository  = "https://github.com/alkuzin/nullvm"
license     = "GPL-3"
edition     = "2024"

# Project dependencies section.
[dependencies]
nullvm_common = { path = "../nullvm_common" }
# Data & time library.
chrono = { workspace = true }
# Raw FFI bindings to platform's system libraries.
libc = { workspace = true }
# FFI bindings to KVM.
kvm-bindings = { workspace = true }
# KVM API wrapper.
kvm-ioctls = { workspace = true }
